--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-typescript": "^0.3.8",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.1"
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-htmlhint": "~0.4.1",
+    "grunt-contrib-htmlmin": "~0.3.0",
+    "grunt-contrib-less": "~0.11.4",
+    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-contrib-cssmin": "~0.10.0"
   },
   "repository": {
     "type": "git",
